--- a/index.html
+++ b/index.html
@@ -13,221 +13,255 @@
     <title>Responsive Design</title>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
+    <div class="wrapper">
+      <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand"><img src="./img/FLO_log.jpg" alt="" /></a>
+          <div class="align">
+            <button class="btn-0 d-none d-sm-inline">CREATE</button>
+            <div class="vl d-none d-sm-block"></div>
+            <button class="btn-1 d-none d-sm-inline">3AR1E</button>
+            <div class="menu">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </nav>
       <div class="container-fluid">
-        <a class="navbar-brand"><img src="./img/FLO_log.jpg" alt="" /></a>
-        <div class="align">
-          <button class="btn-0 d-none d-sm-inline">CREATE</button>
-          <div class="vl d-none d-sm-block"></div>
-          <button class="btn-1 d-none d-sm-inline">3AR1E</button>
-          <div class="menu">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="mt-2 d-flex flex-wrap">
+          <div class="left-text me-auto">
+            <h2 class="pt-3">
+              Today, September 13 stats <span>data in UTC</span>
+            </h2>
           </div>
-        </div>
-      </div>
-    </nav>
-    <div class="container-fluid">
-      <div class="mt-2 d-flex flex-wrap">
-        <div class="left-text me-auto">
-          <h2 class="pt-1">
-            Today, September 13 stats <span>data in UTC</span>
-          </h2>
-        </div>
-        <div
-          class="right-text gap-2 d-flex align-items-center justify-content-end"
-        >
-          <p class="m-0">Sep 13,2019 - Sep 13-2019</p>
-          <img class="m-0" src="./img/case_icon.jpg" alt="" />
-          <button class="pb-1"><strong>Export</strong></button>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="mt-0 row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card">
-            <div
-              class="card-body"
-              style="background-color: #ec5125; color: #fff"
-            >
-              <div class="row">
-                <div class="col-lg-7">
-                  <h2 class="d-flex align-items-center" style="font-size: 25px">
-                    <span class="no" style="font-size: 50px">0&nbsp;</span>Total
-                    Clicks
-                  </h2>
-                  <hr />
-                  <h2 class="d-flex align-items-center" style="font-size: 25px">
-                    <span class="no" style="font-size: 50px">0&nbsp;</span
-                    >Floinks Created
-                  </h2>
-                </div>
-                <div class="col-lg-5 d-none d-lg-block">
-                  <img src="./img/bhai wah.png" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div
-              class="card-body"
-              style="background-color: #30cc3b; color: #fff"
-            >
-              <div class="row">
-                <div class="col-lg-7">
-                  <h2 class="d-flex align-items-center" style="font-size: 25px">
-                    <span class="no" style="font-size: 50px">0&nbsp;</span>Total
-                    Clicks
-                  </h2>
-                  <hr />
-                  <h2 class="d-flex align-items-center" style="font-size: 25px">
-                    <span class="no" style="font-size: 50px">0&nbsp;</span
-                    >Floinks Created
-                  </h2>
-                </div>
-                <div class="col-lg-5 d-none d-lg-block">
-                  <img src="./img/2.png" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div
-              class="card-body"
-              style="background-color: #096eb4; color: #fff"
-            >
-              <div class="row">
-                <div class="col-lg-7">
-                  <h2 class="d-flex align-items-center" style="font-size: 25px">
-                    <span class="no" style="font-size: 50px">0&nbsp;</span>Total
-                    Clicks
-                  </h2>
-                  <hr />
-                  <h2 class="d-flex align-items-center" style="font-size: 25px">
-                    <span class="no" style="font-size: 50px">0&nbsp;</span
-                    >Floinks Created
-                  </h2>
-                </div>
-                <div class="col-lg-5 d-none d-lg-block">
-                  <img src="./img/3.png" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row my-4">
-        <div class="col-md-6 d-flex p-3">
           <div
-            class="card w-100 h-100"
-            style="border: 1px solid #000; border-radius: 2px"
+            class="right-text gap-2 d-flex align-items-center justify-content-end"
           >
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 style="font-size: 23px">Top Floinks</h5>
-                <h6 style="color: #ec5125">View all</h6>
-              </div>
-              <div class="text">
-                <div class="d-flex justify-content-between align-items-center">
-                  <h5>FontAwesome</h5>
-                  <h6>Sep 13, 12:11 PM</h6>
-                </div>
-                <p>https://www.google.com/</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <a href="#">flo.ink/Ad3seA4c</a>
-                  <div class="d-flex gap-2 justify-content-center">
-                    <img src="../img/3-1.png" alt="" />
-                    <img src="../img/2-1.png" alt="" />
-                    <img src="../img/1.png" alt="" />
-                  </div>
-                </div>
-                <hr />
-              </div>
-              <div class="text">
-                <div class="d-flex justify-content-between align-items-center">
-                  <h5>FontAwesome</h5>
-                  <h6>Sep 13, 12:11 PM</h6>
-                </div>
-                <p>https://www.google.com/</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <a href="#">flo.ink/Ad3seA4c</a>
-                  <div class="d-flex gap-2 justify-content-center">
-                    <img src="../img/3-1.png" alt="" />
-                    <img src="../img/2-1.png" alt="" />
-                    <img src="../img/1.png" alt="" />
-                  </div>
-                </div>
-                <hr />
-              </div>
-              <div class="text">
-                <div class="d-flex justify-content-between align-items-center">
-                  <h5>FontAwesome</h5>
-                  <h6>Sep 13, 12:11 PM</h6>
-                </div>
-                <p>https://www.google.com/</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <a href="#">flo.ink/Ad3seA4c</a>
-                  <div class="d-flex gap-2 justify-content-center">
-                    <img src="../img/3-1.png" alt="" />
-                    <img src="../img/2-1.png" alt="" />
-                    <img src="../img/1.png" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
+            <p class="m-0">Sep 13,2019 - Sep 13-2019</p>
+            <img class="m-0" src="./img/case_icon.jpg" alt="" />
+            <button class="pb-1"><strong>Export</strong></button>
           </div>
         </div>
-        <div class="col-md-6 d-flex p-3">
-          <div
-            class="card w-100 h-100"
-            style="border: 1px solid #000; border-radius: 2px"
-          >
-            <div class="card-body d-flex flex-column">
+      </div>
+      <div class="container-fluid">
+        <div class="mt-0 row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card">
               <div
-                class="d-flex justify-content-between align-items-center flex-wrap"
+                class="card-body"
+                style="background-color: #ec5125; color: #fff"
               >
-                <h5 style="font-size: 21px" class="me-auto">
-                  Organic Share Top Content
-                </h5>
+                <div class="row">
+                  <div class="col-lg-7">
+                    <h2
+                      class="d-flex align-items-center"
+                      style="font-size: 25px"
+                    >
+                      <span class="no" style="font-size: 50px">0&nbsp;</span
+                      >Total Clicks
+                    </h2>
+                    <hr />
+                    <h2
+                      class="d-flex align-items-center"
+                      style="font-size: 25px"
+                    >
+                      <span class="no" style="font-size: 50px">0&nbsp;</span
+                      >Floinks Created
+                    </h2>
+                  </div>
+                  <div class="col-lg-5 d-none d-lg-block">
+                    <img src="./img/bhai wah.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div
+                class="card-body"
+                style="background-color: #30cc3b; color: #fff"
+              >
+                <div class="row">
+                  <div class="col-lg-7">
+                    <h2
+                      class="d-flex align-items-center"
+                      style="font-size: 25px"
+                    >
+                      <span class="no" style="font-size: 50px">0&nbsp;</span
+                      >Total Clicks
+                    </h2>
+                    <hr />
+                    <h2
+                      class="d-flex align-items-center"
+                      style="font-size: 25px"
+                    >
+                      <span class="no" style="font-size: 50px">0&nbsp;</span
+                      >Floinks Created
+                    </h2>
+                  </div>
+                  <div class="col-lg-5 d-none d-lg-block">
+                    <img src="./img/2.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div
+                class="card-body"
+                style="background-color: #096eb4; color: #fff"
+              >
+                <div class="row">
+                  <div class="col-lg-7">
+                    <h2
+                      class="d-flex align-items-center"
+                      style="font-size: 25px"
+                    >
+                      <span class="no" style="font-size: 50px">0&nbsp;</span
+                      >Total Clicks
+                    </h2>
+                    <hr />
+                    <h2
+                      class="d-flex align-items-center"
+                      style="font-size: 25px"
+                    >
+                      <span class="no" style="font-size: 50px">0&nbsp;</span
+                      >Floinks Created
+                    </h2>
+                  </div>
+                  <div class="col-lg-5 d-none d-lg-block">
+                    <img src="./img/3.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row my-4">
+          <div class="col-md-6 d-flex p-3">
+            <div
+              id="b-color"
+              class="card w-100 h-100"
+              style="border: 1px solid #efedee; border-radius: 2px"
+            >
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <h5 style="font-size: 23px">Top Floinks</h5>
+                  <h6 style="color: #ec5125">View all</h6>
+                </div>
+                <div class="text">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <h5>FontAwesome</h5>
+                    <h6 style="font-size: 15px">Sep 13, 12:11 PM</h6>
+                  </div>
+                  <p>https://www.google.com/</p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <a href="#">flo.ink/Ad3seA4c</a>
+                    <div class="d-flex gap-2 justify-content-center">
+                      <img src="../img/3-1.png" alt="" />
+                      <img src="../img/2-1.png" alt="" />
+                      <img src="../img/1.png" alt="" />
+                    </div>
+                  </div>
+                  <hr />
+                </div>
+                <div class="text">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <h5>FontAwesome</h5>
+                    <h6 style="font-size: 15px">Sep 13, 12:11 PM</h6>
+                  </div>
+                  <p>https://www.google.com/</p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <a href="#">flo.ink/Ad3seA4c</a>
+                    <div class="d-flex gap-2 justify-content-center">
+                      <img src="../img/3-1.png" alt="" />
+                      <img src="../img/2-1.png" alt="" />
+                      <img src="../img/1.png" alt="" />
+                    </div>
+                  </div>
+                  <hr />
+                </div>
+                <div class="text">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <h5>FontAwesome</h5>
+                    <h6 style="font-size: 15px">Sep 13, 12:11 PM</h6>
+                  </div>
+                  <p>https://www.google.com/</p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <a href="#">flo.ink/Ad3seA4c</a>
+                    <div class="d-flex gap-2 justify-content-center">
+                      <img src="../img/3-1.png" alt="" />
+                      <img src="../img/2-1.png" alt="" />
+                      <img src="../img/1.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex p-3">
+            <div
+              id="b-color"
+              class="card w-100 h-100"
+              style="border: 1px solid #efedee; border-radius: 2px"
+            >
+              <div class="card-body d-flex flex-column">
                 <div
-                  class="d-flex justify-content-center align-items-center gap-2"
+                  class="d-flex justify-content-between align-items-center flex-wrap"
                 >
-                  <p class="m-0 grey">Coming soon</p>
-                  <button id="btn">Upgrade to Enterprise</button>
+                  <h5 style="font-size: 21px" class="me-auto">
+                    Organic Share Top Content
+                  </h5>
+                  <div
+                    class="d-flex justify-content-center align-items-center gap-2"
+                  >
+                    <p class="m-0 grey">Coming soon</p>
+                    <button id="btn">Upgrade to Enterprise</button>
+                  </div>
                 </div>
-              </div>
-              <div
-                class="d-flex justify-content-center align-items-center flex-column flex-fill p-2"
-              >
-                <img
-                  class="mb-3"
-                  style="width: 200px"
-                  src="./img/network.png"
-                  alt=""
-                />
-                <h2 style="font-size: 24px">Add a Flo.ink Network Domain</h2>
-                <p>Learn about who is sharing your content</p>
-                <a style="text-decoration: none; color: #ec5125" href="#"
-                  ><strong>Learn More</strong></a
+                <div
+                  class="d-flex justify-content-center align-items-center flex-column flex-fill p-2"
                 >
+                  <img
+                    class="mb-3"
+                    style="width: 200px"
+                    src="./img/network.png"
+                    alt=""
+                  />
+                  <h2 style="font-size: 24px">Add a Flo.ink Network Domain</h2>
+                  <p>Learn about who is sharing your content</p>
+                  <a style="text-decoration: none; color: #ec5125" href="#"
+                    ><strong>Learn More</strong></a
+                  >
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+      ></script>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
